Update documentation links to use relative paths for improved navigation consistency.

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -4,11 +4,11 @@ import { CardContainer, Card, CardHeader, CardBody } from '../../components/Card
 
 Aztec is a privacy-first L2 rollup scaling solution on Ethereum.
 
-![Aztec Overview](/Aztec_overview.png)
+![Aztec Overview](../public/Aztec_overview.png)
 
 ## High level view
 
-![High level](/aztec-high-level.png)
+![High level](../public/aztec-high-level.png)
 
 1. A user interacts with Aztec through Aztec.js (like web3js or ethersjs)
 2. Private functions are executed in the PXE, which is client-side
@@ -75,7 +75,7 @@ Noir is a zero-knowledge domain specific language used for writing smart contrac
 ### Start coding
 
 <div>
- <Card  link='/developers/getting_started_on_sandbox'>
+ <Card  link='./getting-started'>
     <CardHeader>
       <h3>Developer Getting Started Guide</h3>
     </CardHeader>
@@ -90,7 +90,7 @@ Noir is a zero-knowledge domain specific language used for writing smart contrac
 Explore the Concepts for a deeper understanding into the components that make up Aztec:
 
 <CardContainer>
-  <Card link='/developers/docs/concepts/accounts'>
+  <Card link='./concepts#accounts'>
     <CardHeader>
       <h3>Accounts</h3>
     </CardHeader>
@@ -99,7 +99,7 @@ Explore the Concepts for a deeper understanding into the components that make up
     </CardBody>
   </Card>
 
-  <Card  link='/developers/docs/concepts/pxe'>
+  <Card  link='./concepts#pxe'>
     <CardHeader>
       <h3>PXE (pronounced 'pixie')</h3>
     </CardHeader>
@@ -108,7 +108,7 @@ Explore the Concepts for a deeper understanding into the components that make up
     </CardBody>
   </Card>
 
-   <Card  link='/developers/docs/concepts/storage/state_model'>
+   <Card  link='./concepts#state-model'>
     <CardHeader>
       <h3>State model</h3>
     </CardHeader>
@@ -117,7 +117,7 @@ Explore the Concepts for a deeper understanding into the components that make up
     </CardBody>
   </Card>
 
-  <Card  link='/developers/docs/concepts/storage'>
+  <Card  link='./concepts#storage'>
     <CardHeader>
       <h3>Storage</h3>
     </CardHeader>
@@ -126,7 +126,7 @@ Explore the Concepts for a deeper understanding into the components that make up
     </CardBody>
   </Card>
 
-  <Card  link='/developers/docs/concepts/wallets'>
+  <Card  link='./concepts#wallets'>
     <CardHeader>
       <h3>Wallets</h3>
     </CardHeader>
@@ -135,7 +135,7 @@ Explore the Concepts for a deeper understanding into the components that make up
     </CardBody>
   </Card>
 
-  <Card  link='/developers/docs/concepts/advanced/circuits'>
+  <Card  link='./concepts#circuits'>
     <CardHeader>
       <h3>Protocol Circuits</h3>
     </CardHeader>
