--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,4 +1,4 @@
-import { CardContainer, Card, CardHeader, CardBody } from '../../components/Card'
+import { CardContainer, Card, CardHeader, CardBody } from '../../components/Card';
 
 # Aztec Overview
 
@@ -75,13 +75,11 @@ Noir is a zero-knowledge domain specific language used for writing smart contrac
 ### Start coding
 
 <div>
- <Card  link='./getting-started'>
+  <Card link="./getting-started">
     <CardHeader>
       <h3>Developer Getting Started Guide</h3>
     </CardHeader>
-    <CardBody>
-      Follow the getting started guide to start developing with the Aztec Sandbox
-    </CardBody>
+    <CardBody>Follow the getting started guide to start developing with the Aztec Sandbox</CardBody>
   </Card>
 </div>
 
@@ -99,41 +97,42 @@ Explore the Concepts for a deeper understanding into the components that make up
     </CardBody>
   </Card>
 
-  <Card  link='./concepts#pxe'>
-    <CardHeader>
-      <h3>PXE (pronounced 'pixie')</h3>
-    </CardHeader>
-    <CardBody>
-      The Private Execution Environment (or PXE) is a client-side library for the execution of private operations
-    </CardBody>
-  </Card>
+<Card link="./concepts#pxe">
+  <CardHeader>
+    <h3>PXE (pronounced 'pixie')</h3>
+  </CardHeader>
+  <CardBody>
+    The Private Execution Environment (or PXE) is a client-side library for the execution of private
+    operations
+  </CardBody>
+</Card>
 
-   <Card  link='./concepts#state-model'>
-    <CardHeader>
-      <h3>State model</h3>
-    </CardHeader>
-    <CardBody>
-      Aztec has a hybrid public/private state model
-    </CardBody>
-  </Card>
+<Card link="./concepts#state-model">
+  <CardHeader>
+    <h3>State model</h3>
+  </CardHeader>
+  <CardBody>Aztec has a hybrid public/private state model</CardBody>
+</Card>
 
-  <Card  link='./concepts#storage'>
-    <CardHeader>
-      <h3>Storage</h3>
-    </CardHeader>
-    <CardBody>
-     In Aztec, private data and public data are stored in two trees: a public data tree and a note hashes tree
-    </CardBody>
-  </Card>
+<Card link="./concepts#storage">
+  <CardHeader>
+    <h3>Storage</h3>
+  </CardHeader>
+  <CardBody>
+    In Aztec, private data and public data are stored in two trees: a public data tree and a note
+    hashes tree
+  </CardBody>
+</Card>
 
-  <Card  link='./concepts#wallets'>
-    <CardHeader>
-      <h3>Wallets</h3>
-    </CardHeader>
-    <CardBody>
-     Wallets expose to dapps an interface that allows them to act on behalf of the user, such as querying private state or sending transactions
-    </CardBody>
-  </Card>
+<Card link="./concepts#wallets">
+  <CardHeader>
+    <h3>Wallets</h3>
+  </CardHeader>
+  <CardBody>
+    Wallets expose to dapps an interface that allows them to act on behalf of the user, such as
+    querying private state or sending transactions
+  </CardBody>
+</Card>
 
   <Card  link='./concepts#circuits'>
     <CardHeader>
