fix the flipping build

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -42,7 +42,7 @@ Private state works with UTXOs, which are chunks of data that we call notes. To 
 
 Public state works similarly to other chains like Ethereum, behaving like a public ledger. Public data is stored in a public data tree.
 
-![Public vs private state](@site/static/img/public-and-private-state-diagram.png)
+![Public vs private state](/public-and-private-state-diagram.png)
 
 Aztec smart contract developers should keep in mind that different data types are used when manipulating private or public state. Working with private state is creating commitments and nullifiers to state, whereas working with public state is directly updating state.
 
