add all the filea

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -4,11 +4,11 @@ import { CardContainer, Card, CardHeader, CardBody } from '../../components/Card
 
 Aztec is a privacy-first L2 rollup scaling solution on Ethereum.
 
-![Aztec Overview](../public/Aztec_overview.png)
+![Aztec Overview](/Aztec_overview.png)
 
 ## High level view
 
-![High level](../public/aztec-high-level.png)
+![High level](/aztec-high-level.png)
 
 1. A user interacts with Aztec through Aztec.js (like web3js or ethersjs)
 2. Private functions are executed in the PXE, which is client-side
